fix(CreateMarketFormFund): use column layout on mobile to fee input

--- a/src/components/CreateMarketFormFund/CreateMarketFormFund.module.scss
+++ b/src/components/CreateMarketFormFund/CreateMarketFormFund.module.scss
@@ -34,6 +34,14 @@
   }
 }
 
+.fee {
+  @media (max-width: 576px) {
+    flex-direction: column !important;
+    align-items: flex-start !important;
+    gap: var(--size-8) !important;
+  }
+}
+
 .alert {
   display: flex;
   flex-direction: row;
